# electronics-agent-kit

./: .gitignore
docs/: CONVENTIONS.md  GLOSSARY.md  README.md  architecture-health-report.md
docs/agents/: README.md  bom-agent.md  datasheet-agent.md  dfm-agent.md  drc-agent.md  emc-agent.md  erc-agent.md  learning-agent.md  manufacturing-agent.md  placement-agent.md  planning-agent.md  requirement-agent.md  routing-agent.md  schematic-agent.md
docs/collaboration/: multi-user-and-sessions.md
docs/compiler/: compiler-ir.md  transformations.md
docs/core/: agent-runtime-protocol.md  capability-registry.md  checkpoint-system.md  concurrency-and-consistency.md  contracts.md  determinism-and-reproducibility.md  engineering-runtime.md  error-handling.md  event-bus.md  execution-engine.md  failure-taxonomy-and-degraded-modes.md  provenance-and-traceability.md  reasoning-engine-interface.md  runtime-lifecycle.md  scheduler.md  shared-state-model.md  state-machine-framework.md  workflow-orchestration.md
docs/crosscutting/: configuration.md  cost-and-resource-governance.md  logging-and-observability.md  performance.md  security.md
docs/data/: data-modeling.md  data-versioning-and-migration.md  design-version-control.md  storage.md
docs/decisions/: 0001-adopt-clean-architecture-dependency-rule.md  0002-runtime-owns-knowledge-llm-as-reasoning-engine.md  0003-shared-state-consistency-model.md  0004-event-sourcing-decision.md  0005-ir-as-canonical-phase-boundary-representation.md  0006-agent-fsm-separation.md  0007-units-and-physical-quantity-type-system.md  0008-design-version-control-model.md  0009-determinism-and-replay-strategy.md  0010-human-in-the-loop-autonomy-levels.md  0011-implementation-language-and-ring-per-crate.md  0012-event-sourced-file-log-persistence.md  0013-reasoning-adapters-fixture-and-live.md  0014-first-phase-requirement-planning.md  0015-phase1-autonomous-hitl-deferred.md  README.md
docs/engineering/: component-library.md  constraint-engine.md  human-in-the-loop.md  learning-engine.md  planning-engine.md  standards-and-compliance.md  units-and-quantities.md  verification-engine.md
docs/foundation/: architecture-views.md  engineering-domain-model.md  (+5 more)
eak/: Cargo.toml  README.md
eak/crates/eak-cli/: Cargo.toml
eak/crates/eak-cli/fixtures/: default_cassette.json
eak/crates/eak-cli/src/: lib.rs  main.rs
eak/crates/eak-cli/tests/: integration.rs
eak/crates/eak-compiler/: Cargo.toml
eak/crates/eak-compiler/src/: lib.rs
eak/crates/eak-domain/: Cargo.toml
eak/crates/eak-domain/src/: lib.rs
eak/crates/eak-engines/: Cargo.toml
eak/crates/eak-engines/src/: lib.rs
eak/crates/eak-phases/: Cargo.toml
eak/crates/eak-phases/src/: agent.rs  bom_planning.rs  bom_verification.rs  component_placement.rs  constraint_extraction.rs  constraint_verification.rs  dfm_verification.rs  drc_verification.rs  emc_analysis.rs  engineering_analysis.rs  erc_verification.rs  lib.rs  manufacturing_generation.rs  pcb_floor_planning.rs  requirement_planning.rs  routing_planning.rs  schematic_planning.rs
eak/crates/eak-ports/: Cargo.toml
eak/crates/eak-ports/src/: lib.rs
eak/crates/eak-reasoning/: Cargo.toml
eak/crates/eak-reasoning/src/: anthropic.rs  fixture.rs  lib.rs
eak/crates/eak-runtime/: Cargo.toml
eak/crates/eak-runtime/src/: clock.rs  fsm.rs  lib.rs  orchestrator.rs  protocol.rs  replay.rs  runtime_core.rs  state.rs
eak/crates/eak-store/: Cargo.toml
eak/crates/eak-store/src/: lib.rs
eak/crates/eak-units/: Cargo.toml
eak/crates/eak-units/src/: lib.rs
engineering-science/: README.md
(+109 files in other folders)
