[package]
name = "eak-ports"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
eak-domain = { workspace = true }
eak-units = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
