[package]
name = "eak-reasoning"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
eak-domain = { workspace = true }
eak-ports = { workspace = true }
ureq = { workspace = true, optional = true, features = ["json"] }

[features]
live = ["dep:ureq"]
